--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
     background-color: rgb(23, 27, 28);
+    font-family: Helvetica-Bold, "Helvetica Neue", Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .head {
@@ -7,12 +10,11 @@ body {
     display: flex;
     justify-content: center;
     color: rgb(226, 222, 215);
-    font-family: Helvetica-Bold, "Helvetica Neue", Arial, sans-serif;
+    margin-top: 48px;
 }
 
 .player-container {
     color: white;
-    font-family: Helvetica-Bold, "Helvetica Neue", Arial, sans-serif;
 }
 
 .player-name {
@@ -23,7 +25,7 @@ body {
     font-size: 14px;
 }
 
-img {
+.player-image {
     background-color: black;
 }
 
@@ -34,6 +36,8 @@ img {
     gap: 15px;
     align-items: center;
     justify-content: center;
+    margin-left: 16px;
+    margin-right: 16px;
 }
 
 .player-info {
@@ -53,4 +57,43 @@ img {
     display: flex;
     justify-content: space-between;
     padding: 8px;
+}
+
+li {
+    list-style: none;
+    color: white;
+}
+
+.header-info {
+    display: flex;
+}
+
+.header-info {
+    font-size: 18px;
+    gap: 10px;
+    justify-content: flex-start;
+    margin: 0;
+    padding: 8px;
+}
+
+.header {
+    display: flex;
+    background-color: rgb(50, 50, 50);
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.header-logo {
+    display: flex;
+    justify-content: center;
+    max-width: 38px;
+    min-height: 38px;
+    flex-shrink: 0;
+}
+
+.logo {
+    width: 38px;
+    height: auto;
+    flex-shrink: 0;
 }
